<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">"Life progressbar"</string>

    <integer name="progress">83</integer>
    <string name="title_activity_settings">Settings</string>
    <string name="add_widget">Add widget</string>
    <string name="tic_tac">Tic Tac...</string>
    <string name="edad">Birth Date</string>
    <string name="si">Yes</string>
    <string name="fumaba_mucho">I did (A lot)</string>
    <string name="macho">Boy</string>
    <string name="hembra">Girl</string>
    <string name="salir_y_guardar">Save and exit</string>
    <string name="tengo_diabetes">I have diabetes</string>
    <string name="tengo_problemas_de_coraz_n">I have hearth problems</string>
    <string name="date_format">Month/Year</string>
    <string name="bebes">Alcohol?</string>
    <string name="altura">Height</string>
    <string name="fumaba_poco">I Did</string>
    <string name="peso">Weight</string>
    <string name="fumas">Smoke?</string>
    <string name="no">No</string>
    <string name="about">About</string>
    <string name="salir">Exit</string>
    <string name="R1">Recommendation: Exercise every day</string>
    <string name="R2">Recommendation: Use stairs instead of elevators</string>
    <string name="R3">Recommendation: Don\'t drink alcohol</string>
    <string name="R4">Recommendation: Don\'t smoke</string>
    <string name="R5">Recommendation: Eat more Fruit and Vegetable</string>
    <string name="R6">Recommendation: Avoid trash food</string>
    <string name="R7">Recommendation: Drink water</string>
    <string name="R8">Recommendation: Be happy</string>
    <string name="R9">Recommendation: Sleep at least 8 hours a day</string>
    <string name="R10">Recommendation: Avoid sedentarism</string>
    <string name="R11">Recommendation: Avoid stress</string>
    <string name="R12">Recommendation: Get vaccinated to combat viruses</string>
    <string name="R13">Recommendation: Be higienic</string>
    <string name="R14">Recommendation: Go to the doctor</string>
    <string name="R15">Recommendation: Take care of your mental health</string>
    <string name="R16">Recommendation: Wash your hands</string>
    <string name="P17">Recommendation: Add LifeProgressbar widget to the home screen</string>
    <string name="P18">Recommendation: Write your five star review in the play store! 😉</string>
    <string name="P19">Recommendation: Send your suggest to samasasamu@protonmail.com</string>
    <string name="eres_feliz">Are you happy?</string>
    <string name="conduces">Do you Drive?</string>
    <string name="mucho">A lot</string>
    <string name="un_poco">A bit</string>
    <string name="cent_metros">Centimeters</string>
    <string name="siguiente">Next</string>
    <string name="info">Life progressbar is an application that helps you manage your time (or get depressed) by reminding you, every time you use the phone, how much time to life you have left.</string>
    <string name="developed_by">Developed by Samuel Menendez</string>
    <string name="share_text">Try this App! http://bit.ly/getLifeProgressbar</string>
    <string name="share">Share</string>
    <string name="per_week">Per week</string>
</resources>